# Pretender

./: .gitignore  README.md  pyproject.toml
pretender/: __init__.py  enums.py  events.py  packet.py  player.py  server.py  tools.py  world.py
tests/: test_pretender.py
