[tool.poetry]
name = "pretender"
version = "0.1.0"
description = ""
authors = ["mooncell07 <mooncell07@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
attrs = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
